--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,15 +1,45 @@
-<h1>List flats</h1>
 
-<% @flats.each do |flat| %>
-  <p><%= flat.name %></p>
-  <p><%= flat.address %></p>
-  <p><%= flat.description %></p>
-  <p><%= flat.price_per_night%></p>
-  <p><%= flat.number_of_guests%></p>
-  <p>
-    <%= link_to "Show this flat", flat_path(flat), class: "btn btn-success" %>
-  </p>
-<% end %>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-12">
+      <h1>All our Flats</h1>
+    </div>
+  </div>
+  <br>
+  <br>
 
-
-<%= link_to "+ Add flat", new_flat_path, class: "btn btn-primary" %>
+  <div class="row">
+    <% @flats.each do |flat| %>
+      <div class="col-md-4">
+        <div class="flat-card bg-secondary my-3">
+          <div class="flat-card-content px-2 py-2">
+            <div class="flat-card-title">
+              <h4><%= flat.name %></h4>
+            </div>
+            <p><%= flat.address %></p>
+            <div class="d-flex justify-content-start">
+              <div class="flex align-items-center">
+                <i class="fa-solid fa-people-line"></i>
+                <span><%= flat.number_of_guests %></span>
+              </div>
+              <div class="flex align-items-center ms-3">
+                <i class="fa-solid fa-euro-sign"></i>
+                <span><%= flat.price_per_night %></span>
+              </div>
+            </div>
+          </div>
+          <div class="flat-card-actions bg-light">
+            <%= link_to "More info", flat_path(flat) %>
+            <%= link_to "Edit", edit_flat_path(flat), class: "ms-3 text-warning" %>
+            <%= link_to "Remove", flat_path(flat),
+                data: { turbo_method: :delete, turbo_confirm: "Are you sure?" },
+                class: "ms-3 text-danger"%>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+<br>
+<br>
+<p><%= link_to "+ Add flat", new_flat_path(@flat), class: "btn btn-primary" %></p>
